:iphone: [Pdf viewer] Try a fix on mobile

--- a/assets/styles/utilities.scss
+++ b/assets/styles/utilities.scss
@@ -1,3 +1,7 @@
+.hover-no-rotate:hover {
+  transform: none !important;
+}
+
 .hover-rotate-10:hover {
   transform: rotate(-10deg);
 }
